--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,3 +18,22 @@ body{
     height:100vh;
     z-index: -1;
 }
+
+.wobbling-8{
+    width:20px;
+    height:20px;
+    border-radius:50%;
+    position: relative;
+    transform-origin:50% -200%;
+    background:radial-gradient(at 30% 30%,#0000,#000a) red;
+    animation: w8 1s cubic-bezier(.5,-200,.5,200) infinite;
+  }
+  .wobbling-8:before {
+    content: "";
+    position: absolute;
+    inset:-200% 8px 100%;
+    background:black; 
+  }
+  @keyframes w8 { 
+      100% { transform:rotate(1deg)} 
+  }
