--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -19,21 +19,30 @@ body{
     z-index: -1;
 }
 
-.wobbling-8{
-    width:20px;
-    height:20px;
-    border-radius:50%;
+
+.wobbling-8 {
+    width: 40px;
+    height: 40px;
+    color:#f03355;
     position: relative;
-    transform-origin:50% -200%;
-    background:radial-gradient(at 30% 30%,#0000,#000a) red;
-    animation: w8 1s cubic-bezier(.5,-200,.5,200) infinite;
-  }
-  .wobbling-8:before {
-    content: "";
+    background: radial-gradient(10px,currentColor 94%,#0000);
+}
+.wobbling-8:before {
+    content:'';
     position: absolute;
-    inset:-200% 8px 100%;
-    background:black; 
-  }
-  @keyframes w8 { 
-      100% { transform:rotate(1deg)} 
-  }
+    inset:0;
+    border-radius: 50%;
+    background:
+      radial-gradient(9px at bottom right,#0000 94%,currentColor) top    left,
+      radial-gradient(9px at bottom left ,#0000 94%,currentColor) top    right,
+      radial-gradient(9px at top    right,#0000 94%,currentColor) bottom left,
+      radial-gradient(9px at top    left ,#0000 94%,currentColor) bottom right;
+    background-size:20px 20px;
+    background-repeat: no-repeat;
+    animation: sp8 1.5s infinite cubic-bezier(0.3,1,0,1);
+}
+@keyframes sp8 {
+    33%  {inset:-10px;transform: rotate(0deg)}
+    66%  {inset:-10px;transform: rotate(90deg)}
+    100% {inset:0    ;transform: rotate(90deg)}
+}
